--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,10 @@
-body{
-    background-color: aquamarine;
+h1{
+    padding-top: 2%;
+    text-align: center;
+}
+nav{
+    background-color: lavender !important;
+}
+img{
+    width: 10%;
 }
